W2P-1: added roles; added transaction case marked by sonar along with fixes and tests